// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 1`] = `
<div>
  <div
    class=" css-13tocah"
  >
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      class="workflow-base-info-desc"
    >
      -
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 2`] = `
<div>
  <div
    class="test-cls css-1ntohg1"
  >
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      class="workflow-base-info-desc"
    >
      desc
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 3`] = `
<div>
  <div
    class=" css-10a2scf"
  >
    <div
      class="workflow-base-info-status"
    >
      <span
        class="icon-workflow-status-wrapper css-u3jcp4"
      >
        <svg
          fill="none"
          height="55"
          viewBox="0 0 74 55"
          width="74"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            filter="url(#filter0_d_1360_13602)"
          >
            <path
              d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
              fill="currentColor"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              height="57.2961"
              id="filter0_d_1360_13602"
              width="74"
              x="0"
              y="-3"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <fecolormatrix
                in="SourceAlpha"
                result="hardAlpha"
                type="matrix"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feoffset
                dy="2"
              />
              <fegaussianblur
                stdDeviation="2.5"
              />
              <fecomposite
                in2="hardAlpha"
                operator="out"
              />
              <fecolormatrix
                type="matrix"
                values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
              />
              <feblend
                in2="BackgroundImageFix"
                mode="normal"
                result="effect1_dropShadow_2935_18512"
              />
              <feblend
                in="SourceGraphic"
                in2="effect1_dropShadow_2935_18512"
                mode="normal"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </span>
      <span
        class="workflow-base-info-status-text"
      >
        已关闭
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      class="workflow-base-info-desc"
    >
      desc
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 4`] = `
<div>
  <div
    class=" css-12ynod2"
  >
    <div
      class="workflow-base-info-status"
    >
      <span
        class="icon-workflow-status-wrapper css-u3jcp4"
      >
        <svg
          fill="none"
          height="55"
          viewBox="0 0 74 55"
          width="74"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            filter="url(#filter0_d_1360_13602)"
          >
            <path
              d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
              fill="currentColor"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              height="57.2961"
              id="filter0_d_1360_13602"
              width="74"
              x="0"
              y="-3"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <fecolormatrix
                in="SourceAlpha"
                result="hardAlpha"
                type="matrix"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feoffset
                dy="2"
              />
              <fegaussianblur
                stdDeviation="2.5"
              />
              <fecomposite
                in2="hardAlpha"
                operator="out"
              />
              <fecolormatrix
                type="matrix"
                values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
              />
              <feblend
                in2="BackgroundImageFix"
                mode="normal"
                result="effect1_dropShadow_2935_18512"
              />
              <feblend
                in="SourceGraphic"
                in2="effect1_dropShadow_2935_18512"
                mode="normal"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </span>
      <span
        class="workflow-base-info-status-text"
      >
        正在导出
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      class="workflow-base-info-desc"
    >
      desc
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 5`] = `
<div>
  <div
    class=" css-13tocah"
  >
    <div
      class="workflow-base-info-status"
    >
      <span
        class="icon-workflow-status-wrapper css-u3jcp4"
      >
        <svg
          fill="none"
          height="55"
          viewBox="0 0 74 55"
          width="74"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            filter="url(#filter0_d_1360_13602)"
          >
            <path
              d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
              fill="currentColor"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              height="57.2961"
              id="filter0_d_1360_13602"
              width="74"
              x="0"
              y="-3"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <fecolormatrix
                in="SourceAlpha"
                result="hardAlpha"
                type="matrix"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feoffset
                dy="2"
              />
              <fegaussianblur
                stdDeviation="2.5"
              />
              <fecomposite
                in2="hardAlpha"
                operator="out"
              />
              <fecolormatrix
                type="matrix"
                values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
              />
              <feblend
                in2="BackgroundImageFix"
                mode="normal"
                result="effect1_dropShadow_2935_18512"
              />
              <feblend
                in="SourceGraphic"
                in2="effect1_dropShadow_2935_18512"
                mode="normal"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </span>
      <span
        class="workflow-base-info-status-text"
      >
        待审核
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      class="workflow-base-info-desc"
    >
      desc
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 6`] = `
<div>
  <div
    class=" css-1cq7g9q"
  >
    <div
      class="workflow-base-info-status"
    >
      <span
        class="icon-workflow-status-wrapper css-u3jcp4"
      >
        <svg
          fill="none"
          height="55"
          viewBox="0 0 74 55"
          width="74"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            filter="url(#filter0_d_1360_13602)"
          >
            <path
              d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
              fill="currentColor"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              height="57.2961"
              id="filter0_d_1360_13602"
              width="74"
              x="0"
              y="-3"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <fecolormatrix
                in="SourceAlpha"
                result="hardAlpha"
                type="matrix"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feoffset
                dy="2"
              />
              <fegaussianblur
                stdDeviation="2.5"
              />
              <fecomposite
                in2="hardAlpha"
                operator="out"
              />
              <fecolormatrix
                type="matrix"
                values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
              />
              <feblend
                in2="BackgroundImageFix"
                mode="normal"
                result="effect1_dropShadow_2935_18512"
              />
              <feblend
                in="SourceGraphic"
                in2="effect1_dropShadow_2935_18512"
                mode="normal"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </span>
      <span
        class="workflow-base-info-status-text"
      >
        待导出
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      class="workflow-base-info-desc"
    >
      desc
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 7`] = `
<div>
  <div
    class=" css-1i5h2yp"
  >
    <div
      class="workflow-base-info-status"
    >
      <span
        class="icon-workflow-status-wrapper css-u3jcp4"
      >
        <svg
          fill="none"
          height="55"
          viewBox="0 0 74 55"
          width="74"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            filter="url(#filter0_d_1360_13602)"
          >
            <path
              d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
              fill="currentColor"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              height="57.2961"
              id="filter0_d_1360_13602"
              width="74"
              x="0"
              y="-3"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <fecolormatrix
                in="SourceAlpha"
                result="hardAlpha"
                type="matrix"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feoffset
                dy="2"
              />
              <fegaussianblur
                stdDeviation="2.5"
              />
              <fecomposite
                in2="hardAlpha"
                operator="out"
              />
              <fecolormatrix
                type="matrix"
                values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
              />
              <feblend
                in2="BackgroundImageFix"
                mode="normal"
                result="effect1_dropShadow_2935_18512"
              />
              <feblend
                in="SourceGraphic"
                in2="effect1_dropShadow_2935_18512"
                mode="normal"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </span>
      <span
        class="workflow-base-info-status-text"
      >
        已驳回
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      class="workflow-base-info-desc"
    >
      desc
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 8`] = `
<div>
  <div
    class=" css-13bz6lz"
  >
    <div
      class="workflow-base-info-status"
    >
      <span
        class="icon-workflow-status-wrapper css-u3jcp4"
      >
        <svg
          fill="none"
          height="55"
          viewBox="0 0 74 55"
          width="74"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            filter="url(#filter0_d_1360_13602)"
          >
            <path
              d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
              fill="currentColor"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              height="57.2961"
              id="filter0_d_1360_13602"
              width="74"
              x="0"
              y="-3"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <fecolormatrix
                in="SourceAlpha"
                result="hardAlpha"
                type="matrix"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feoffset
                dy="2"
              />
              <fegaussianblur
                stdDeviation="2.5"
              />
              <fecomposite
                in2="hardAlpha"
                operator="out"
              />
              <fecolormatrix
                type="matrix"
                values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
              />
              <feblend
                in2="BackgroundImageFix"
                mode="normal"
                result="effect1_dropShadow_2935_18512"
              />
              <feblend
                in="SourceGraphic"
                in2="effect1_dropShadow_2935_18512"
                mode="normal"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </span>
      <span
        class="workflow-base-info-status-text"
      >
        导出失败
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      class="workflow-base-info-desc"
    >
      desc
    </div>
  </div>
</div>
`;

exports[`test base/DataExport/Common/BasicInfoWrapper should match snapshot 9`] = `
<div>
  <div
    class=" css-14e2e5f"
  >
    <div
      class="workflow-base-info-status"
    >
      <span
        class="icon-workflow-status-wrapper css-u3jcp4"
      >
        <svg
          fill="none"
          height="55"
          viewBox="0 0 74 55"
          width="74"
          xmlns="http://www.w3.org/2000/svg"
        >
          <g
            filter="url(#filter0_d_1360_13602)"
          >
            <path
              d="M69 0H5V31.6481C5 33.2482 5.95359 34.6944 7.42432 35.3247L33.8487 46.6494C35.861 47.5119 38.139 47.5119 40.1514 46.6494L66.5757 35.3247C68.0464 34.6944 69 33.2482 69 31.6481V0Z"
              fill="currentColor"
            />
          </g>
          <defs>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              height="57.2961"
              id="filter0_d_1360_13602"
              width="74"
              x="0"
              y="-3"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <fecolormatrix
                in="SourceAlpha"
                result="hardAlpha"
                type="matrix"
                values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0"
              />
              <feoffset
                dy="2"
              />
              <fegaussianblur
                stdDeviation="2.5"
              />
              <fecomposite
                in2="hardAlpha"
                operator="out"
              />
              <fecolormatrix
                type="matrix"
                values="0 0 0 0 0.454902 0 0 0 0 0.32549 0 0 0 0 0.854902 0 0 0 0.4 0"
              />
              <feblend
                in2="BackgroundImageFix"
                mode="normal"
                result="effect1_dropShadow_2935_18512"
              />
              <feblend
                in="SourceGraphic"
                in2="effect1_dropShadow_2935_18512"
                mode="normal"
                result="shape"
              />
            </filter>
          </defs>
        </svg>
      </span>
      <span
        class="workflow-base-info-status-text"
      >
        导出成功
      </span>
    </div>
    <div
      class="workflow-base-info-title"
    >
      export-task-1
    </div>
    <div
      class="workflow-base-info-desc"
    >
      desc
    </div>
  </div>
</div>
`;
